Fixed some layout issues

--- a/app/src/styles/_colors.scss
+++ b/app/src/styles/_colors.scss
@@ -1,5 +1,7 @@
-$dim-gray: #6c6c6c;
+$dim-gray: #bebebe;
 $desaturated-cyan: #719597;
 $white: #ffffff;
 $platinum: #e3e3e3;
 $deep-space-sparkle: #3b5b71;
+
+$background: $white;
